<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/first_column"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="fitCenter"
    android:adjustViewBounds="true"
    android:paddingTop="6dp">

    <com.petrasons.alphaatssystem.SquareLayout
        android:id="@+id/second_column"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:paddingLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_gray"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/account" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:paddingLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_rectangle_gray"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/product" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/product"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:gravity="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle_gray"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeTextType="uniform"
                    android:fontFamily="@font/font"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:text="@string/time_frame"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/timeFrame"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeTextType="uniform"
                    android:fontFamily="@font/font"
                    android:textColor="@color/black"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:paddingLeft="3dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:background="@drawable/shape_rectangle_gray"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/font"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:maxLines="1"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeTextType="uniform"
                    android:text="@string/size" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    app:autoSizeMaxTextSize="30sp"
                    app:autoSizeMinTextSize="6sp"
                    app:autoSizeTextType="uniform"
                    android:fontFamily="@font/font"
                    android:textColor="@color/black"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </com.petrasons.alphaatssystem.SquareLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_rectangle_gray"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView01"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/font"
                android:text="@string/position"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/position"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:background="@drawable/shape_rectangle_gray">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:text="@string/entry_day" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/entry_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:fontFamily="@font/font"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_rectangle_gray"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:text="@string/exit_day" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/exit_date"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:gravity="center"
                android:fontFamily="@font/font"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:background="@drawable/shape_rectangle_gray">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:text="@string/entry_strategy_u0026_price" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/entry_strategy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/font"
                android:textColor="@color/white"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:layout_gravity="center"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/entry_price"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@drawable/shape_rectangle_gray"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:text="@string/exit_strategy_u0026_price" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/exit_strategy"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/font"
                android:textColor="@color/white"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:layout_gravity="center"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/exit_price"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:fontFamily="@font/font"
                android:textColor="@color/black"
                android:maxLines="1"
                app:autoSizeMaxTextSize="30sp"
                app:autoSizeMinTextSize="6sp"
                app:autoSizeTextType="uniform"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#D1D2D4"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textView7"
            android:text="@string/unrealised_p_u0026l"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:fontFamily="@font/font"
            android:textColor="@color/black"
            android:maxLines="1"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeTextType="uniform" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/unrealised_p_u0026l"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:fontFamily="@font/font"
            android:textColor="@color/black"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeMinTextSize="6sp"
            app:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="test"/>

    </LinearLayout>

</LinearLayout>
